---------------------------------------------------------------------------------------------------
Version: 7.4.1
Date: ????
  Bugfixes:
    - Fix crash when another mod makes all machines have the same number of module slots
---------------------------------------------------------------------------------------------------
Version: 7.4.0
Date: 2026-01-25
  Features:
    - Add import from blueprint - click the import button while holding a blueprint.
  Changes:
    - Hide machines/modules that are marked as "hidden"
---------------------------------------------------------------------------------------------------
Version: 7.3.3
Date: 2025-12-24
  Changes:
    - Add support for module slot count bonuses from quality
---------------------------------------------------------------------------------------------------
Version: 7.3.2
Date: 2025-11-21
  Bugfixes:
    - Fixed crash when importing config from a string (introduced in the 7.3.0 update)
---------------------------------------------------------------------------------------------------
Version: 7.3.1
Date: 2025-11-04
  Bugfixes:
    - Added missing explicit dependency on base game version (new modding API now used in 7.3.0)
---------------------------------------------------------------------------------------------------
Version: 7.3.0
Date: 2025-11-03
  Features:
    - Add ability to use module slot count as a target condition (e.g. define modules for all machines with 3 module slots)
    - Add a tooltip to each module row showing the total effects of those modules
    - Add alternate UI for defining modules when there are many module slots (Threshold configurable in player settings)
---------------------------------------------------------------------------------------------------
Version: 7.2.5
Date: 2025-09-25
  Bugfixes:
    - Fix various issues and crashes with migrations from older versions, or when removing certain mods.